// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom/Feature Module as Context Component with default providers 1`] = `
<storybook-wrapper>
  <storybook-chip
    ng-reflect-display-text="My Chip"
    style="background-color: rgb(238, 238, 238);"
  >
    <span
      class="text"
    >
      My Chíp
    </span>
    <div
      class="remove"
    >
      <span
        class="x"
      >
        ✕
      </span>
    </div>
  </storybook-chip>
</storybook-wrapper>
`;

exports[`Storyshots Custom/Feature Module as Context Component with overridden provider 1`] = `
<storybook-wrapper>
  <storybook-chip
    ng-reflect-display-text="My Chip"
    style="background-color: yellow;"
  >
    <span
      class="text"
    >
      My Chíp
    </span>
    <div
      class="remove"
    >
      <span
        class="x"
      >
        ✕
      </span>
    </div>
  </storybook-chip>
</storybook-wrapper>
`;

exports[`Storyshots Custom/Feature Module as Context Component with self and dependencies declared in its feature module 1`] = `
<storybook-wrapper>
  <storybook-chips-group
    ng-reflect-chips="[object Object],[object Object"
  >
    
    <storybook-chip
      class="chip"
      ng-reflect-display-text="Chip 1"
      style="background-color: rgb(238, 238, 238);"
    >
      <span
        class="text"
      >
        Chíp 1
      </span>
      <div
        class="remove"
      >
        <span
          class="x"
        >
          ✕
        </span>
      </div>
    </storybook-chip>
    <storybook-chip
      class="chip"
      ng-reflect-display-text="Chip 2"
      style="background-color: rgb(238, 238, 238);"
    >
      <span
        class="text"
      >
        Chíp 2
      </span>
      <div
        class="remove"
      >
        <span
          class="x"
        >
          ✕
        </span>
      </div>
    </storybook-chip>
    
    <div
      class="remove-all"
    >
       Remove All 
    </div>
  </storybook-chips-group>
</storybook-wrapper>
`;
